fixed hiding lesson navbar on mobile.

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -682,7 +682,6 @@
 @media (max-width: 979px) {
   #lesson-nav{
     position: absolute;
-    z-index: -1;
     margin-top:10px;
   }
 }
